--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   provider: ^6.1.0
   dropdown_button2: ^2.3.9
   geolocator: ^10.1.0
+  google_mlkit_text_recognition: ^0.11.0
+  permission_handler: ^11.0.1
+  
 
 
 dev_dependencies:
