--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,8 @@ dependencies:
   geolocator: ^10.1.0
   google_mlkit_text_recognition: ^0.11.0
   permission_handler: ^11.0.1
-  
-
+  camera: ^0.10.5+5
+  flutter_tesseract_ocr: ^0.4.24
 
 dev_dependencies:
   flutter_test:
