--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,11 @@ dependencies:
   provider: ^6.1.0
   dropdown_button2: ^2.3.9
   geolocator: ^10.1.0
-  google_mlkit_text_recognition: ^0.11.0
+  #google_mlkit_text_recognition: ^0.11.0
   permission_handler: ^11.0.1
   camera: ^0.10.5+5
   flutter_tesseract_ocr: ^0.4.24
+  flutter_scalable_ocr: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,8 @@ flutter:
   assets:
     # - images/a_dot_burr.jpeg
     - assets/svg/
+    - assets/tessdata/
+    - assets/tessdata_config.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
