--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   permission_handler: ^11.0.1
   camera: ^0.10.5+5
   flutter_tesseract_ocr: ^0.4.24
+  dash_chat_2: ^0.0.19
+  chat_gpt_sdk: ^2.2.5
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +80,7 @@ flutter:
   assets:
     # - images/a_dot_burr.jpeg
     - assets/svg/
+    - assets/image/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
