--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,9 @@ dependencies:
   provider: ^6.1.0
   dropdown_button2: ^2.3.9
   geolocator: ^10.1.0
-  #google_mlkit_text_recognition: ^0.11.0
+  google_mlkit_text_recognition: ^0.11.0
   permission_handler: ^11.0.1
-  camera: ^0.10.5+5
-  flutter_tesseract_ocr: ^0.4.24
-  flutter_scalable_ocr: ^2.0.0
-  drop_down_list: ^0.0.5
+
 
 dev_dependencies:
   flutter_test:
