--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   html: ^0.15.4
   flutter_scalable_ocr: ^2.0.0
   drop_down_list: ^0.0.5
+  flutter_riverpod: ^2.1.3
 
 dev_dependencies:
   flutter_test:
