--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   flutter_scalable_ocr: ^2.0.0
   drop_down_list: ^0.0.5
   flutter_riverpod: ^2.1.3
+  firebase_core: ^2.23.0
+  cloud_firestore: ^4.13.2
+  firebase_storage: ^11.5.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
