--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   cloud_firestore: ^4.13.2
   firebase_storage: ^11.5.2
   shared_preferences: ^2.2.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
