--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyDnNrvxUelBjJHXe2PHsQTRdgssqZ_7U0g" />
+
     <application
         android:label="capstone_wms"
         android:name="${applicationName}"
