--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   firebase_storage: ^11.5.2
   shared_preferences: ^2.2.2
   get: ^4.6.6
+  image_picker: ^1.0.5
 
 dev_dependencies:
   flutter_test:
