--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   shared_preferences: ^2.2.2
   get: ^4.6.6
   image_picker: ^1.0.5
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,11 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   envied_generator: ^0.5.1
   build_runner: ^2.4.6
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/image/logowms.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
